# DeepDrift

./: CNAME  DESIGN.md  LICENSE  MANIFEST.in  README.md  STATUS.md  index.html  pyproject.toml  requirements.txt  setup.py
deepdrift/: __init__.py  core.py  diagnostics.py  doctor.py  llm.py  monitor.py  rl.py  router.py  vision.py
deepdrift/utils/: __init__.py  hooks.py  pooling.py  stats.py
examples/: demo_diffusion_memorization.py  fintech.ipynb
experiments/: diffusion_memorization.py  llm_hallucination.py  rl_cartpole.py  rl_lunarlander.py  vit_svhn_ood.py
figures/: graphical_abstract_review_log.json  vit_ood_profile_review_log.json
scripts/: bootstrap_ci.py  layer_sweep.py  reproduce_all.sh  rl_lead_time_v52.py  welch_test_llm.py
tests/: test_core.py  test_rl.py  test_utils.py  test_vision.py
