[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepdrift"
version = "1.1.4"
authors = [
  { name="Alexey Evtushenko", email="alexey@eutonics.ru" },
]
description = "Zero-Training Hidden-State Monitoring for Robustness in Vision, Language, and Generative Models"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.60.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
all = [
    "transformers>=4.30.0",
    "torchvision>=0.15.0",
    "gymnasium>=0.26.0",
    "stable-baselines3>=2.0.0",
    "pytest>=7.0.0",
]
test = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["deepdrift*"]
